# Scanner

./: .gitignore  Archive.h  CMakeLists.txt  FrameHandler.h  LICENSE  QRScanner.h  README.md  Scanner.cpp  Scanner.h  ScannerQRcode.cpp  UI.h  Ui.h  main.cpp  vcpkg.json
src/Archive/: Archive.cpp  Archive.h  CMakeLists.txt
